fixed image captioning + alignment

--- a/client/src/pages/singlepostpage/SinglePostPage.css
+++ b/client/src/pages/singlepostpage/SinglePostPage.css
@@ -8,6 +8,11 @@
     */
 }
 
+/* ensure background figure caption is clear (just like in editor) */
+.ck-content figure figcaption{
+    background-color: transparent !important;
+}
+
 /* MEDIA QUERIES */
 
 /* For phones */
